<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    android:background="@drawable/background">

    <EditText
        android:id="@+id/editText_username"
        android:ellipsize="start"
        android:gravity="center_horizontal"
        android:layout_width="230dp"
        android:layout_height="40dp"
        android:hint="@string/username"
        android:drawableLeft="@drawable/username"
        android:padding="10dip"
        android:background="@drawable/radius"
        android:drawablePadding="-18dp"
        android:layout_marginTop="250dp" />

    <EditText
        android:id="@+id/editText_password"
        android:ellipsize="start"
        android:gravity="center_horizontal"
        android:layout_width="230dp"
        android:layout_height="40dp"
        android:layout_marginTop="15dp"
        android:drawableLeft="@drawable/password"
        android:padding="10dip"
        android:background="@drawable/radius"
        android:drawablePadding="-18dp"
        android:hint="@string/password"/>

    <Button
        android:id="@+id/button_login"
        android:layout_width="110dp"
        android:layout_height="40dp"
        android:layout_marginTop="15dp"
        android:text="@string/login"
        android:paddingLeft="4dp"
        android:background="@drawable/radius"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="10dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="35dp"
            android:text="@string/not_registered"
            android:paddingLeft="10dp"/>

        <TextView
            android:id="@+id/textView_register"
            android:layout_width="wrap_content"
            android:layout_height="35dp"
            android:text="@string/register"
            android:paddingLeft="10dp"
            android:textStyle="bold"/>


</LinearLayout>