<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.wildlifeapplication.Search.AnimalSearchFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimaryDark"
        android:paddingLeft="5dp">

        <LinearLayout
            android:id="@+id/type_filter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="left"
            android:orientation="vertical"
            android:paddingRight="5dp">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/type_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/type"
                    android:textColor="@color/common_google_signin_btn_text_dark"
                    android:textSize="17dp" />

                <Spinner
                    android:id="@+id/type_spinner"
                    android:layout_width="30dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/min_length_filter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="left"
            android:orientation="vertical"
            android:paddingRight="5dp">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center">

                <TextView
                    android:id="@+id/min_size_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/min_length"
                    android:textSize="17dp"
                    android:textColor="@color/common_google_signin_btn_text_dark" />

                <Spinner
                    android:id="@+id/min_size_spinner"
                    android:layout_width="30dp"
                    android:layout_height="wrap_content" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/max_length_filter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="left"
            android:orientation="vertical"
            android:paddingRight="5dp">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center">

                <TextView
                    android:id="@+id/max_size_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/max_length"
                    android:textSize="17dp"
                    android:textColor="@color/common_google_signin_btn_text_dark" />

                <Spinner
                    android:id="@+id/max_size_spinner"
                    android:layout_width="30dp"
                    android:layout_height="wrap_content" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/colour_filter"
            android:layout_width="wrap_content"
            android:layout_height="23dp"
            android:paddingRight="5dp">

            <Button
                android:id="@+id/colour_button"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="60dp"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:padding="0dp"
                android:text="@string/colours"
                android:textAppearance="@android:style/TextAppearance.DeviceDefault.Widget.TextView"
                android:textColor="@color/common_google_signin_btn_text_dark"
                android:textSize="17dp" />
        </LinearLayout>


    </LinearLayout>

    <TextView
        android:id="@+id/empty"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingLeft="15dp"
        android:text="@string/no_results" />

    <ListView
        android:id="@android:id/list"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

</android.support.v7.widget.LinearLayoutCompat>